[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/default_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/smaller_font.tres" type="DynamicFont" id=3]

[node name="Settings" type="Node2D"]
script = ExtResource( 1 )

[node name="BackGround" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 240.0
color = Color( 0.447059, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 110.0
margin_top = 20.0
margin_right = 210.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 180.0
margin_right = 280.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 3 )
text = "Press [P] or [Esc] to resume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSpeedControls" type="Node2D" parent="."]
position = Vector2( 160, 100 )

[node name="TimeSpeedLabel" type="Label" parent="TimeSpeedControls"]
margin_left = -90.0
margin_top = -22.0
margin_right = 90.0
margin_bottom = -2.00001
custom_fonts/font = ExtResource( 3 )
text = "Time speed: very fast"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSpeedSlider" type="HSlider" parent="TimeSpeedControls"]
margin_left = -100.0
margin_top = 2.0
margin_right = 100.0
margin_bottom = 26.0
max_value = 4.0
value = 3.0
tick_count = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="TimeSpeedControls/TimeSpeedSlider" to="." method="time_speed_changed"]
